@@ -2,6 +2,9 @@ Changes in openair 0.5-26 [2012-03-23]
 =====================================
 *	Add y.relation option to timePlot
 *	Fix interpolation bug in calcFno2 and names in documentation.
+*	Refine conditionalQuantile scales
+*	Provide volatile and non-volatile components for FDMS PM10 and
+	PM2.5 in importKCL - now consistent with importAEA
 
 Changes in openair 0.5-25 [2012-03-16]
 =====================================
